2003-05-10  Juanma Barranquero  <lektu@terra.es>

	* message.el (message-buffer-naming-style): Fix typo.

2003-05-07  Dave Love  <fx@gnu.org>

	[Partial sync with Gnus.]

	* rfc2047.el (rfc2047-header-encoding-alist): Add Followup-To.
	(rfc2047-encode-message-header): Fold when encoding not necessary.
	(rfc2047-encode-region): Skip \n as whitespace.
	(rfc2047-fold-region): Fix whitespace regexps.  Don't break just
	after the header name.
	(rfc2047-unfold-region): Fix regexp and whitespace-skipping.

2003-05-06  Jesper Harder  <harder@ifa.au.dk>

	* gnus-cus.el (gnus-group-customize, gnus-score-parameters): Don't
	quote nil and t in docstrings.

	* gnus-score.el (gnus-score-lower-thread): Likewise.

	* gnus-art.el (gnus-article-mime-match-handle-function): Likewise.

2003-02-28  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnfolder.el (nnfolder-request-accept-article): Don't use
	mail-header-unfold-field.

	* imap.el (imap-ssl-open): Don't depend on ssl.el.
	* nntp.el (nntp-open-ssl-stream): Don't depend on ssl.el.

2003-02-18  Juanma Barranquero  <lektu@terra.es>

	* ietf-drums.el (ietf-drums-remove-whitespace): Fix character
	constant.

2003-02-14  Juanma Barranquero  <lektu@terra.es>

	* mm-uu.el (mm-uu-dissect): Fix use of character constant.

2003-02-11  Stefan Monnier  <monnier@cs.yale.edu>

	* nntp.el (nntp-accept-process-output): Don't use point-max to get
	the buffer's size.

2003-01-31  Joe Buehler  <jhpb@draco.hekimian.com>

	* nnheader.el: Added cygwin to system-type comparisons.

2003-01-27  Juanma Barranquero  <lektu@terra.es>

	* imap.el (imap-mailbox-status): Fix typo.

2003-01-16  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-alter-header-function): Add type and group.

2003-01-15  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-agent.el: Don't use `path'.

	* nnsoup.el (nnsoup-file-name): Ditto.

	* nnmail.el (nnmail-pathname-coding-system): Ditto.
	(nnmail-group-pathname): Ditto.

	* nnimap.el (nnimap-group-overview-filename): Ditto.
